# trunk-packager

./: Cargo.toml  README.md  libraries-found
src/: cli.rs  client.rs  deb_packager.rs  dependencies.rs  main.rs  shared_lib_registry.rs  unarchiver.rs  utils.rs
tar-rs/src/: header.rs
tar-rs/tests/header/: mod.rs
