[package]
name = "shared-lib-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
goblin = "0.7.1"
memmap = "0.7.0"
once_cell = "1.18.0"
owo-colors = "3.5.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
tempfile = "3.7.1"
tokio = { version ="1.30.0", features = ["macros", "rt-multi-thread", "process"] }
