[package]
name = "trunk-packager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
ar = "0.9.0"
argh = "0.1.12"
bytes = "1.4.0"
dashmap = "5.5.0"
flate2 = { version = "1.0.26", features = ["zlib"], default-features = false }
fs-err = "2.9.0"
goblin = "0.7.1"
memmap = "0.7.0"
once_cell = "1.18.0"
owo-colors = "3.5.0"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
tar = { path = "./tar-rs" }
tempfile = "3.7.1"
tokio = { version ="1.30.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1.14"
